--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -3,25 +3,25 @@
   <Profiles />
   <Settings>
     <Setting Name="Server" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">DKANE-LAPTOP\SQLEXPRESS</Value>
+      <Value Profile="(Default)"></Value>
     </Setting>
     <Setting Name="DatabaseName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">PDXDEMOCLOUD-2022-10-4-14-21</Value>
+      <Value Profile="(Default)"></Value>
     </Setting>
     <Setting Name="DatabaseUID" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">DKANE-LAPTOP\Douglas</Value>
+      <Value Profile="(Default)"></Value>
     </Setting>
     <Setting Name="DatabasePWD" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">planimetrondev</Value>
+      <Value Profile="(Default)"></Value>
     </Setting>
     <Setting Name="HostName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">data.attomdata.com</Value>
     </Setting>
     <Setting Name="UserName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Vornado2</Value>
+      <Value Profile="(Default)"></Value>
     </Setting>
     <Setting Name="Password" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">n5b$zTuovk</Value>
+      <Value Profile="(Default)"></Value>
     </Setting>
     <Setting Name="SshHostKeyFingerprint" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
@@ -45,10 +45,10 @@
       <Value Profile="(Default)">ATTOM</Value>
     </Setting>
     <Setting Name="Recipient" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">dkane@planimetron.com</Value>
+      <Value Profile="(Default)"></Value>
     </Setting>
     <Setting Name="MailUser" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">noreply@planimetron.com</Value>
+      <Value Profile="(Default)"></Value>
     </Setting>
     <Setting Name="MailPassword" Type="System.String" Scope="Application">
       <Value Profile="(Default)">ThisIsForEmails!</Value>
